Temporarily disable transition-container class to avoid scrollbar issue

--- a/credit-decision-game/src/styles/page-transitions.css
+++ b/credit-decision-game/src/styles/page-transitions.css
@@ -1,8 +1,8 @@
 /* TODO: Slide left/right https://tympanus.net/Development/PageTransitions/ */
 
 .transition-container {
-  min-height: 100vh;
-  overflow-x: hidden;
+  /* min-height: 100vh;
+  overflow-x: hidden; */
 }
 
 .fade-left--enter {
